force-app/main/default/objects/Course__c/fields/Course_fees__c.field-meta.xml
<CustomField>
    <fullName>Course_fees__c</fullName>
    <label>Course fees</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>